objects/Q9__SyncLog__c.object
<CustomObject>
    <fields>
        <fullName>Q9__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q9__Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sync Log</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Sync Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>